# cmps2200

assignment 01/: assignment-01.md  main.py
assignment 02/: README.md  assignment-02.md  convert.sh  main.py
assignment 03/: answers.md  assignment-03.md  main.py
assignment 04/: README.md  answers.md  assignment-04.md  convert.sh  main.py
assignment 05/: README.md  answers.md  assignment-05.md  convert.sh  f1.txt  main.py
recitation 01/: README.md  main.py
recitation 02/: README.md  main.py  pyproject.toml  test_main.py
recitation 03/: README.md  recitation-03.md
recitation 04/: README.md  main.py  recitation-04.md
recitation 05/: README.md  answers.md  main.py  recitation-05.md
recitation 08/: README.md  answers.md  main.py  recitation-08.md
recitation 09/: README.md  answers.md  convert.sh  main.py  pyproject.toml  recitation-09.md  test_main.py
recitation 10/: README.md  answers.md  main.py  recitation-10.md
recitation 11/: README.md  answers.md  convert.sh  main.py  recitation-11.md
recitation tutorial/: README.md  main.py
