[tool.poetry]
name = "name"
version = "0.1.0"
description = ""
authors = ["user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

